Add event listeners to play game

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <hr>
 
         <!-- Buttons to play the game with, can be clicked/tapped or use arrow keys -->
-        <button class="btn-game" data-game-btn="number">1</button>
+        <button class="btn-game" id="btn-num" data-game-btn="number">1</button>
         <br>
         <button class="btn-game" data-game-btn="fizz">Fizz</button>
         <button class="btn-game" data-game-btn="buzz">Buzz</button>
