Add links to nav

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <h1>FizzBuzz Game</h1>
     <nav>
         <ul>
-            <li>Preferences</li>
+            <li><a href="#preferences">Preferences</a></li>
             <!-- A hard mode with random numbers? -->
+            <!-- Option to turn off Timer? -->
             <!-- Dark Mode? -->
             <!-- High Contrast Mode? -->
-            <li>Statistics</li>
+            <li><a href="#stats">Statistics</a></li>
             <!-- High Scores, separate list for hard mode if implemented -->
-            <li>How to Play</li>
+            <li><a href="#help">How To Play</a></li>
             <!-- Rules of FizzBuzz -->
         </ul>
     </nav>
