Add visual indication of correct answer

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <button class="btn-game" id="btn-num" data-game-btn="number">1</button>
         <br>
         <button class="btn-game" data-game-btn="fizz">Fizz</button>
+        <span id="lastAnswerCorrect"></span>
         <button class="btn-game" data-game-btn="buzz">Buzz</button>
         <br>
         <button class="btn-game" data-game-btn="fizzbuzz">Fizz<br>Buzz</button>
