--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <h1>FizzBuzz</h1>
     <nav>
         <ul>
-            <li><a href="#preferences" id="linkPreferences">Preferences</a></li>
+            <li><a href="#preferences" data-link="0" class="nav-item">Preferences</a></li>
             <!-- A hard mode with random numbers? -->
             <!-- Option to turn off Timer? -->
             <!-- Dark Mode? -->
             <!-- High Contrast Mode? -->
-            <li><a href="#stats" id="linkStats" >Statistics</a></li>
+            <li><a href="#stats" data-link="1" class="nav-item">Statistics</a></li>
             <!-- High Scores, separate list for hard mode if implemented -->
-            <li><a href="#howtoplay" id="linkHowToPlay" >How To Play</a></li>
+            <li><a href="#howtoplay" data-link="2" class="nav-item">How To Play</a></li>
             <!-- Rules of FizzBuzz -->
         </ul>
     </nav>
@@ -45,7 +45,7 @@
         <button class="btn-game" id="btn-num" data-game-btn="number">1</button>
         <br>
         <button class="btn-game" data-game-btn="fizz">Fizz</button>
-        <span id="lastAnswerCorrect"></span>
+        <span id="lastAnswerDisplay"></span>
         <button class="btn-game" data-game-btn="buzz">Buzz</button>
         <br>
         <button class="btn-game" data-game-btn="fizzbuzz">Fizz<br>Buzz</button>
@@ -53,8 +53,21 @@
     </main>
 
     <!-- A Preferences Modal -->
+    <div id="modalHowToPlay" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Preferences</h2>
+            <p>Settings and preferences</p>
+        </div>
+    </div>
     <!-- A statistics modal -->
-
+    <div id="modalHowToPlay" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Statistics</h2>
+            <p>stats go here</p>
+        </div>
+    </div>
     <!-- A modal to appear on first visit explaining the rules of FizzBuzz -->
     <div id="modalHowToPlay" class="modal">
 
