--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
         <div class="modal-content">
             <span class="close" aria-label="Close Statistics.">&times;</span>
             <h2>Statistics</h2>
-            <p>Current High Score is: <span id="high-score-display"></span></p>
+            <p>High Score is: <span id="high-score-display"></span> set on <span id="high-score-date-display"></span></p>
+            <hr>
+            <p>Hard Mode High Score is: <span id="high-score-hard-display"></span> set on <span id="high-score-hard-date-display"></span></p>
+            <hr>
+            <p>Total games played: <span id="games-played-display"></span></p>
             <!-- Games Played, High Score, Hard Mode High Score, Share Button -->
         </div>
     </div>
