Add styles to match users prefers-color-scheme

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Animate timer with CSS -->
     <div id="countdown-timer">Timer</div>
     <br><br>
-    <span id="lastAnswerDisplay">Select an option to start the game...</span>
+    <span id="lastAnswerDisplay">Start counting from 1...</span>
 
     <main>
 
