Add hard mode with random nums

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
             <span class="close" aria-label="Close Preferences.">&times;</span>
             <h2>Preferences</h2>
             <p>Settings and preferences</p>
-            <!-- A hard mode with random numbers? -->
+            <label for="hard-mode">Hard Mode</label>
+            <input type="checkbox" name="hard-mode" id="hard-mode">
             <!-- Option to turn off Timer? -->
             <!-- Dark Mode? -->
             <!-- High Contrast Mode? -->
