--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="manifest" href="./site.webmanifest">
 
     <!-- Google Fonts Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,8 +36,8 @@
                 <!-- Preferences Link -->
                 <li>
                     <a href="#" aria-label="Preferences" data-link="0" class="nav-item">
-                        <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                            class="bi bi-gear-fill" viewBox="0 0 16 16">
+                        <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                            fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
                             <path
                                 d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
                         </svg>
@@ -69,14 +69,16 @@
         </nav>
     </header>
 
-    <!-- A time limit countdown on making a selection, maybe 5 seconds -->
-    <!-- Animate timer with CSS -->
-    <div id="countdown-timer"></div>
-    <br><br>
-    <span id="lastAnswerDisplay">Start counting from 1...</span>
-
     <main>
-
+        <!-- A time limit countdown on making a selection, maybe 5 seconds -->
+        <!-- Animate timer with CSS -->
+        <br><br>
+        <span id="lastAnswerDisplay">Start counting from 1...</span>
+        <br><br>
+        <label for="file">Time Left:</label>
+        <br>
+        <progress id="timer" value="100" max="100">5 secs</progress>
+        <br><br>
         <!-- Buttons to play the game with, can be clicked/tapped or use arrow keys -->
         <button class="btn-game" id="btn-num" data-game-btn="number" aria-live="assertive">1</button>
         <br>
@@ -131,11 +133,11 @@
             <p>Total games played: <span id="games-played-display"></span></p>
             <button id="btn-share" class="btn-stats btn-share">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                class="bi bi-share-fill" viewBox="0 0 16 16">
-                <path
-                d="M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5z" />
-            </svg>
-            Share Stats</button>
+                    class="bi bi-share-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5z" />
+                </svg>
+                Share Stats</button>
             <button id="btn-clear-stats" class="btn-stats">Clear All Stats</button>
         </div>
     </aside>
