--- a/index.html
+++ b/index.html
@@ -90,24 +90,29 @@
     </main>
 
     <!-- A Preferences Modal -->
-    <aside class="modal">
+    <aside class="modal" role="dialog" aria-labelledby="modal-prefs-title">
         <div class="modal-content">
             <span class="close" aria-label="Close Preferences.">&times;</span>
-            <h2>Preferences</h2>
-            <label for="hard-mode">Hard Mode</label>
-            <input type="checkbox" name="hard-mode" id="hard-mode">
+            <h2 id="modal-prefs-title">Preferences</h2>
+            <label for="prefs-hard-mode">Hard Mode</label>
+            <input type="checkbox" name="prefs-hard-mode" id="prefs-hard-mode" class="prefs-check">
             <br>
             <small>(Non sequential random numbers!)</small>
+            <hr>
+            <label for="prefs-dark-mode">Dark Mode</label>
+            <input type="checkbox" name="prefs-dark-mode" id="prefs-dark-mode" class="prefs-check">
+            <br>
+            <small>Auto set based on your computer preferences.</small>
             <!-- Option to turn off Timer? -->
             <!-- Dark Mode? -->
             <!-- High Contrast Mode? -->
         </div>
     </aside>
     <!-- A statistics modal -->
-    <aside class="modal">
+    <aside class="modal" role="dialog" aria-labelledby="modal-stats-title">
         <div class="modal-content">
             <span class="close" aria-label="Close Statistics.">&times;</span>
-            <h2>Statistics</h2>
+            <h2 id="modal-stats-title">Statistics</h2>
             <table id="scoreboard">
                 <thead>
                     <tr>
@@ -142,12 +147,12 @@
         </div>
     </aside>
     <!-- A modal to appear on first visit explaining the rules of FizzBuzz -->
-    <aside class="modal">
+    <aside class="modal" role="dialog" aria-labelledby="">
 
         <!-- Modal content -->
-        <div class="modal-content">
+        <div class="modal-content" id="modal-rules-title">
             <span class="close" aria-label="Close How to Play.">&times;</span>
-            <h2>How to Play</h2>
+            <h2 id="modal-rules-title">How to Play</h2>
             <p>Counting upwards from 1...</p>
             <p>If the number is divisible by three choose <strong>Fizz</strong>.
                 <br>
